# litigation1.0

./: .env.example  .gitignore  README.md  demo_script.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_document_categories.py  0003_add_date_range_to_queries.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  ingest.py  query.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chunk.py  citation.py  document.py  query.py
backend/app/services/: __init__.py  chunker.py  confidence.py  embedder.py  generator.py  ingest.py  parser.py  retriever.py  scraper.py  verifier.py
backend/scripts/: load_seed.py  process_documents.py
backend/tests/: conftest.py  test_chunker.py  test_confidence.py  test_generator.py  test_health.py  test_parser.py  test_query.py  test_retriever.py  test_verifier.py
data/seed/: cases.json
docs/stage1-discovery/: day1-absorb-brief.md  day2-solution-space.md  project-discovery-note.md
docs/stage2-design/: day3-system-design.md  design-doc.md  tools-list.md
docs/stage3-development/: category-label-design.md  dev-log.md  self-audit.md
docs/stage4-retrospective/: retrospective.md
frontend/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: lawfirm.html
frontend/src/: App.jsx  index.css
logs/: daily-log.md
(+23 files in other folders)
